--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -51,7 +51,7 @@
     /* 마이페이지 */
     .view-action,
     .box-list-a {padding:0 24px}
-    .box-a.big {margin:0 24px}
+    .box-a.big {margin:0 24px;}
     .customer-summery {margin:0 24px 28px}
     .leader-section-a {padding:0 50px}
 
