--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -602,3 +602,21 @@ input[type='date'], input[type='time'] {display:block;/*-webkit-appearance:textf
 .btn-gold:hover,
 .btn-gold:focus{background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);border-color:#80590d;box-shadow:0 0 8px rgba(0,0,0,.9)}
 .btn-gold.selected{background: linear-gradient(-46deg, #242424,#2c2c2c 40%, #3f3f3f, #393939);border-color:#3e3e3e}
+
+
+.ui-acco { padding:0 40px;}
+.ui-acco-wrap:first-child{border-top:2px solid #2e3036;}
+.ui-acco-wrap {width:100%; padding:0; margin:0; }
+.ui-acco-tit {width:100%; height:100%; margin:-1px 0 0; border-bottom:1px solid #ccc; border-top:1px solid #ccc; padding:0; background:#fff;}
+.ui-acco-tit-wrap {width:auto; text-decoration:none; color:#000;}
+.ui-acco-btn {top:0; right:0; width:100%; height:100%; padding:25px 40px 25px 60px; letter-spacing:0; text-align:left; color:#000; font-size:18px;}
+.ui-acco-btn:before {content:"Q"; color:#28292d; font-size:30px; font-weight:600; display:block; position:absolute; top:18px; left:23px; font-family: 'Roboto';}
+.ui-acco-btn:after {content:""; width:30px; height:30px; background:url(../images/common/arrow-acco.png) no-repeat 0 0 / cover; display:block; position:absolute; right:10px; top:50%; margin-top:-10px; float:right; overflow:hidden; color:#000;}
+.ui-acco-btn.selected:after {content:"";transform: rotate(180deg);}
+a.ui-acco-btn {text-decoration: underline; color:blue}
+a.ui-acco-btn .ui-acco-arrow {transform: rotate(-90deg);}
+a.ui-acco-btn:after {content:""; width:30px; height:30px; background:url(../images/common/arrow-acco.png) no-repeat 0 0 / cover;}
+.ui-acco-pnl {background:#eeeeee; margin:0; padding:40px 60px; font-size:16px}
+.ui-acco-pnl:before {content:"A"; color:#c59214; font-size:30px; font-weight:600; display:block; position:absolute; top:28px; left:23px; font-family: 'Roboto';}
+
+.ui-acco-tit-wrap {padding:10px;text-decoration:none; color:#000;}
