--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -388,9 +388,12 @@
 .terms-box .terms-inner-a {margin-top:10px;padding-left:12px}
 .terms-box .terms-inner-b {margin-top:6px;padding-left:22px}
 
+.terms-content-box .terms-box .terms-tit-a {text-align:center;font-weight:600;font-size:20px;margin-bottom:20px}
 .terms-content-box .terms-box .terms-tit-b {text-align:center;font-weight:600}
 .terms-content-box .terms-box .terms-tit-b ~ .terms-tit-b {margin-top:20px}
 .terms-content-box .terms-box .terms-tit-c {font-weight:500;margin-bottom:4px}
+.terms-content-box .terms-list {margin-top:12px}
+.terms-content-box .terms-list .terms-list-item {font-size:15px;font-weight:600;line-height:28px;word-break:keep-all}
 
 /* form */
 .form-item,
