--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -674,6 +674,7 @@
     .terms-box .terms-indent-a {font-size:14px;padding-left:18px;text-indent:-18px}
     .terms-box .terms-inner-b {padding-left:18px}
     .terms-box .terms-indent-b {font-size:13px}
+    .terms-content-box .terms-list .terms-list-item {font-size:13px;line-height:24px}
 
     /* btn */
     .btn-gold.big {height:48px;padding:6px 30px;font-size:20px}
