자주하는 질문 add

--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -321,6 +321,9 @@
     /* 마이페이지 */
     .view-area {padding:0;margin:-10px 0}
     .terms-content-box {padding:0}
+
+    /* 고객센터 */
+    .box-a .ui-acco {padding:0}
 }
 @media (max-width:1000px) {
     /* 메인 */
@@ -649,6 +652,12 @@
     .tbl-base td.subject{padding:0}
 
     .view-area {margin:0}
+
+    /* 고객센터 */
+    .box-a .ui-acco-btn {font-size:15px;padding:20px 40px}
+    .box-a .ui-acco-pnl {padding:20px 20px 20px 40px;font-size:14px;line-height:24px}
+    .box-a .ui-acco-pnl:before {font-size:20px;left:15px;top:20px}
+    .box-a .ui-acco-btn:before {font-size:20px;left:15px}
 }
 @media (max-width:600px) {
     /* 회원가입 */
