--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -143,8 +143,8 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 .btn-gold:hover,
 .btn-gold:focus{background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);border-color:#80590d;box-shadow:0 0 8px rgba(0,0,0,.9)}
 .btn-gold.selected{background: linear-gradient(-46deg, #242424,#2c2c2c 40%, #3f3f3f, #393939);border-color:#3e3e3e}
-.btn-top {width:60px;height:61px;display:block;background:url("../../resources/images/common/btn_top.png") no-repeat 0 0 rgba(0,0,0,.1);background-size:100%;border-radius:50%;opacity:0;-webkit-transition:opacity .2s ease-out;transition:opacity .2s ease-out}
-.btn-kakao {width:60px;height:61px;display:block;background:url("../../resources/images/common/btn_kakao.png") no-repeat 0 0 rgba(0,0,0,.1);background-size:100%;border-radius:50%}
+.btn-top {width:60px;height:60px;display:block;background:url("../../resources/images/common/btn_top.png") no-repeat 0 0;background-size:100%;border-radius:50%;opacity:0;-webkit-transition:opacity .2s ease-out;transition:opacity .2s ease-out}
+.btn-kakao {width:60px;height:60px;display:block;background:url("../../resources/images/common/btn_kakao.png") no-repeat 0 0;background-size:100%;border-radius:50%}
 .btn-type-a {height:54px;background-color:#dba137;border-radius:8px;padding:0 28px;color:#fff;font-size:21px;font-weight:500}
 .btn-type-b {height:54px;background-color:#dba137;border-radius:8px;color:#fff;font-size:21px;font-weight:500;display:inline-block;padding:0 28px;line-height:54px}
 .btn-type-c {height:54px;background-color:#514635;border-radius:8px;color:#fff;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:54px}
