--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -94,6 +94,18 @@
     .teacher-menu .dep-2{width:100%;padding-left:150px;padding-right:50px}
     .teacher-menu .dep-2 button{height:40px;border-radius:20px;padding:5px 20px 6px;font-size:16px;margin:0 6px 10px}
 
+    /* over-type */
+    .teacher-menu.over-type .btn-dep-1 {font-size:16px}
+    .teacher-menu.over-type .n1 .btn-dep-1 {top:0}
+    .teacher-menu.over-type .n2 .btn-dep-1 {top:35px}
+    .teacher-menu.over-type .n3 .btn-dep-1 {top:70px}
+    .teacher-menu.over-type .n4 .btn-dep-1 {top:105px}
+    .teacher-menu.over-type .dep-1 .n1::before {top:20px}
+    .teacher-menu.over-type .dep-1 .n2::before {top:55px}
+    .teacher-menu.over-type .dep-1 .n3::before {top:90px}
+    .teacher-menu.over-type .dep-1 .n4::before {top:125px}
+    .teacher-menu.over-type .on .btn-dep-1 {font-size:28px}
+
     .teacher-list{margin:0 auto;padding:10px 80px 0;background-size:94%}
     .teacher-item {position:relative;width:200px;height:250px;border-radius:20px;border-bottom-left-radius:0;box-shadow:6px 6px 20px rgba(0,0,0,.3);background: linear-gradient(#fff, #ddd7d0);margin:50px auto 20px}
     .teacher-item .photo{bottom:110px;height:180px}
@@ -514,7 +526,7 @@
     .teacher-menu .dep-1 li::before{ left:0;width:30px}
     .teacher-menu .btn-dep-1{position:absolute;left:0;font-size:18px; height:40px;margin-left:0;padding-left:35px}
     .teacher-menu .on .btn-dep-1{font-size:20px;opacity:1;padding-left:75px}
-    .teacher-menu .n2.on .btn-dep-1{font-size:20px;opacity:1;padding-right:75px}
+    .teacher-menu .n2.on .btn-dep-1 {font-size:20px;opacity:1;padding-right:75px}
     .teacher-menu .on .btn-dep-1::after{left:30px}
     .teacher-menu .btn-dep-1::after{ width:34px;height:27px;top:5px;left:-34px}
     .teacher-menu .n2 .btn-dep-1::after{left:auto;right:-34px;transform: scaleX(-1)}
@@ -525,9 +537,23 @@
     .teacher-menu .dep-1 .n1::before{top:30px}
     .teacher-menu .dep-1 .n2::before{top:30px;left:auto;right:0}
     .teacher-menu .dep-1 .n3::before{top:150px}
-
     .teacher-menu .dep-2{width:100%;padding:70px 20px 10px}
     .teacher-menu .dep-2 button{height:34px;border-radius:17px;padding:5px 10px 6px;font-size:14px;margin:0 6px 10px}
+
+    /* over-type */
+    .teacher-menu.over-type .n1 .btn-dep-1 {top:0}
+    .teacher-menu.over-type .n2 .btn-dep-1 {top:0}
+    .teacher-menu.over-type .n3 .btn-dep-1 {top:35px}
+    .teacher-menu.over-type .n4 .btn-dep-1 {top:35px;left:auto;right:0;padding-right:35px}
+    .teacher-menu.over-type .dep-1 .n1::before {top:20px}
+    .teacher-menu.over-type .dep-1 .n2::before {top:20px}
+    .teacher-menu.over-type .dep-1 .n3::before {top:55px}
+    .teacher-menu.over-type .dep-1 .n4::before {top:55px;left:auto;right:0}
+    .teacher-menu.over-type .n4 .btn-dep-1::after {left:auto;right:-34px;transform:scaleX(-1)}
+    .teacher-menu.over-type .n4.on .btn-dep-1::after {right:30px}
+    .teacher-menu.over-type .n4.on .btn-dep-1 {font-size:20px;opacity:1;padding-right:75px}
+    .teacher-menu.over-type .dep-2 {padding-top:90px}
+
     .teacher-list{padding:10px 40px 0}
     .btn-gold.type-more {width:40%}
 
