--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -74,6 +74,7 @@
 
     .util-menu > a {width:30px;height:30px;border:1px solid #fff;border-radius:50%;background:url(../../resources/images/common/ico-header.png) no-repeat -3.5px -5px / 70px}
     .util-menu .util-n2 {background-position:-38.5px -5px}
+    .util-menu .util-n3 {background-position:-3px -38.5px}
     .util-menu > a + a {margin-left:5px}
 
     .teacher-group {height:auto;margin-bottom:200px;margin-top:0}
