--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -327,7 +327,7 @@
 .leader-section-c .more-area .btn-more:after {width:2px;height:20px;margin:-10px 0 0 -1px}
 
 /* sub title */
-.title-group{width:100%;position: relative;padding-left:20px;min-height:200px;margin-bottom:90px}
+.title-group{width:100%;position: relative;padding-left:20px;min-height:200px;margin-bottom:80px}
 .title-group.type-my {margin-bottom:50px}
 .title-group .face{display: inline-block;vertical-align: middle;width:90px;margin-top:0}
 .title-group .face img{width:100%}
@@ -563,7 +563,7 @@ input[type='date'], input[type='time'] {display:block;/*-webkit-appearance:textf
 .use-info .info-item .use-title {font-size:24px;color:#504633;font-weight:500;text-align:center}
 .use-info .info-item .use-txt {font-size:17px;line-height:26px;color:#292a2e;word-break:keep-all;text-align:center;letter-spacing:-1px;margin-top:8px}
 
-    /* 검색 */
+/* 검색 */
 .search-area {max-width:1500px;margin:0 auto 28px}
 .box-search-a {display:table;width:100%}
 .box-search-a .search-col-a {display:table-cell;vertical-align:top}
@@ -659,3 +659,49 @@ a.ui-acco-btn:after {content:""; width:30px; height:30px; background:url(../imag
 .ui-acco-pnl:before {content:"A"; color:#c59214; font-size:30px; font-weight:600; display:block; position:absolute; top:28px; left:23px; font-family: 'Roboto';}
 
 .ui-acco-tit-wrap {padding:10px;text-decoration:none; color:#000;}
+
+/* service */
+.service-info-area {padding:0 40px;text-align:center}
+.service-info-b {background-color:#f4f4f4;padding-top:40px;margin-top:70px}
+.txt-service-a {text-align:center;font-size:36px;font-weight:600;color:#292a2e;font-family:SCD, 'sans-serif';letter-spacing:-1px;word-break:keep-all}
+.txt-service-a.v2 {margin-top:52px}
+.txt-service-b {font-size:27px;word-break:keep-all;color:#494032;text-decoration:underline;text-align:center}
+.service-list-a {display:flex;margin:36px auto 0;max-width:900px}
+.service-list-a .list-item {width:20%;padding:0 15px;text-align:center}
+.service-list-a .list-item i {display:block;margin:0 auto}
+.service-list-a .list-item .txt {margin-top:12px;font-size:16px;color:#292a2e;word-break:keep-all}
+.service-list-b {max-width:1100px;margin:32px auto 0;text-align:left}
+.service-list-b .list-item {position:relative;padding-left:42px}
+.service-list-b .list-item ~ .list-item {margin-top:10px}
+.service-list-b .list-item .service-number {width:32px;height:32px;display:flex;justify-content:center;align-items:center;color:#fff;font-size:16px;position:absolute;top:0;left:0;background-color:#494032;border-radius:50%}
+.service-list-b .list-item .txt {font-size:20px;color:#292a2e;line-height:32px;word-break:keep-all}
+.service-list-b .list-item .txt .tit {color:#494032;font-weight:500}
+.service-info-b .leader-img-box {text-align:center;margin-top:52px}
+.service-info-b .leader-img-box img {max-width:100%;vertical-align:top}
+.service-info-b .txt-service-b {margin-top:20px}
+.service-list-c {max-width:500px;margin:32px auto 0}
+.service-list-c .list-item {font-family:SCD, 'sans-serif';background:url("../../resources/images/main/box-light.png") no-repeat 100% 0 #22252c;border:1px solid #161616;border-radius:20px;padding:24px;box-shadow:3px 0 8px rgba(26,29,36,.4);text-align:center;font-size:20px;font-weight:500;color:#dca33d}
+.service-list-c .list-item ~ .list-item {margin-top:10px}
+.service-info-area .btn-gold.big {display:block;max-width:420px;margin:32px auto 0}
+.service-list-d {max-width:1300px;margin:60px auto 0;display:flex;flex-wrap:wrap;justify-content:space-between}
+.service-list-d .list-item {width:calc((100% - 40px) / 3);padding:24px;display:flex;justify-content:space-between;align-items:center;background-color:#4a4c52;border:1px solid #2d2d2d;border-radius:20px}
+.service-list-d .list-item:nth-child(n+4) {margin-top:20px}
+.service-list-d .list-item:nth-child(4),
+.service-list-d .list-item:nth-child(5),
+.service-list-d .list-item:nth-child(6) {background-color:#676767}
+.service-list-d .list-item i {width:80px;margin-right:20px}
+.service-list-d .list-item .tit {font-size:20px;font-weight:500;color:#fff;word-break:keep-all}
+.service-list-d .list-item .txt {font-size:16px;color:#bdbdbd;word-break:keep-all;margin-top:4px}
+.service-list-d .list-item .txt-contents {flex:1;text-align:left}
+.triangle-area {position:relative;max-width:1100px;margin:60px auto 0}
+.triangle-area .img-box {text-align:center}
+.triangle-area .img-box img {max-width:100%;vertical-align:top}
+.triangle-area .triangle-m-title {display:none}
+.triangle-area .triangle-item {width:calc(50% - 15px);border:1px solid #2d2d2d;background-color:#383a41;padding:20px;box-shadow:3px 0 7px rgba(26,29,36,.4);border-radius:20px;text-align:left}
+.triangle-area .triangle-item.n1 {position:absolute;right:-40px;top:0;width:40%}
+.triangle-area .triangle-item .triangle-tit {font-size:18px;color:#f9c05b;line-height:24px;font-weight:500;border-bottom:1px solid #606167;padding-bottom:12px;word-break:keep-all}
+.triangle-area .triangle-item .triangle-list {margin-top:12px}
+.triangle-area .triangle-item .triangle-list .list-item {padding-left:10px;position:relative;font-size:14px;line-height:24px;color:#fff;font-weight:200;word-break:keep-all}
+.triangle-area .triangle-item .triangle-list .list-item:before {content:'';display:block;position:absolute;left:0;top:10px;width:3px;height:3px;background-color:#fff;border-radius:50%}
+.triangle-item-group {display:flex;justify-content:space-between;margin-top:24px}
+.indent-a {padding-left:6px;text-indent:-6px}
